--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-handlebars": "^7.0.1",
     "firebase": "^9.17.2",
     "firebase-admin": "^11.5.0",
+    "firebase-functions": "^4.2.1",
     "request": "^2.88.2",
     "socket.io": "^4.6.1"
   }
