--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "makeohio2023express",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "makeohio23next",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "axios": "^1.3.4",
-    "body-parser": "^1.20.2",
-    "express": "^4.17.1",
-    "express-handlebars": "^7.0.1",
+    "bootstrap": "^5.2.3",
     "firebase": "^9.17.2",
-    "firebase-admin": "^11.5.0",
-    "firebase-functions": "^4.2.1",
-    "request": "^2.88.2",
-    "socket.io": "^4.6.1"
+    "marked": "^4.2.12",
+    "next": "13.2.3",
+    "react": "18.2.0",
+    "react-bootstrap": "^2.7.2",
+    "react-dom": "18.2.0",
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.2"
   }
 }
