Fixed cdn mistake

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 # python
-keys.json
+api_keys.json
 *.wav
 .venv/*
 __pycache__
